tests/spec/fail/generic_chan_empty_lock_mismatch.aja
fuc mark_int(ch: chan[int]) -> void:
    return

ch = chan()
mark_int(ch)
send(ch, "oops")
